; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_modwlan.c_SimpleLinkNetAppEventHandler.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_modwlan.c_SimpleLinkNetAppEventHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_7__ = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }

@wlan_obj = common dso_local global %struct.TYPE_9__ zeroinitializer, align 4
@STATUS_BIT_IP_ACQUIRED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SimpleLinkNetAppEventHandler(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %5 = icmp ne %struct.TYPE_7__* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %25

7:                                                ; preds = %1
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %24 [
    i32 131, label %11
    i32 130, label %21
    i32 129, label %22
    i32 128, label %23
  ]

11:                                               ; preds = %7
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %3, align 8
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @wlan_obj, i32 0, i32 1), align 4
  %13 = load i32, i32* @STATUS_BIT_IP_ACQUIRED, align 4
  %14 = call i32 @SET_STATUS_BIT(i32 %12, i32 %13)
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  store %struct.TYPE_8__* %17, %struct.TYPE_8__** %3, align 8
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @wlan_obj, i32 0, i32 0), align 4
  br label %25

21:                                               ; preds = %7
  br label %25

22:                                               ; preds = %7
  br label %25

23:                                               ; preds = %7
  br label %25

24:                                               ; preds = %7
  br label %25

25:                                               ; preds = %6, %24, %23, %22, %21, %11
  ret void
}

declare dso_local i32 @SET_STATUS_BIT(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
